<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/Background"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:gravity="center">

    <EditText
        style="@style/edittext_custom"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/full_name"
        android:layout_gravity="center_horizontal"
        android:hint="@string/full_name"/>

    <EditText
        style="@style/edittext_custom"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:layout_gravity="center_horizontal"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        style="@style/edittext_custom"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mail"
        android:layout_gravity="center_horizontal"
        android:hint="@string/mail"
        android:inputType="textEmailAddress" />

    <EditText
        style="@style/edittext_custom"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/position"
        android:layout_gravity="center_horizontal"
        android:hint="@string/position"/>

    <EditText
        style="@style/edittext_custom"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sector"
        android:layout_gravity="center_horizontal"
        android:hint="@string/sector"/>

    <EditText
        style="@style/edittext_custom"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contact_type"
        android:layout_gravity="center_horizontal"
        android:hint="@string/contact_type"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:layout_marginBottom="5dp"
        android:text="@string/save"
        android:layout_marginTop="50dp" />


</LinearLayout>