<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/Background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="8dp"
        android:text="RT Survey"
        android:textSize="40sp"
        android:gravity="left"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginLeft="8dp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/reference1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <EditText
            style="@style/edittext_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mail"
            android:hint="@string/login_mail"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reference2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reference1"
        android:layout_centerHorizontal="true">

        <EditText
            style="@style/edittext_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_below="@+id/mail"
            android:layout_centerHorizontal="true"
            android:hint="@string/login_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/save"
        android:id="@+id/login"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reference2"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/reference2"
        android:layout_alignStart="@+id/reference2"
        android:layout_alignRight="@+id/reference2"
        android:layout_alignEnd="@+id/reference2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Powered by Gold Data"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000"
        android:layout_marginLeft="8dp" />


</RelativeLayout>